add all fiats currencies to rates
